# captionflow

./: .gitignore  Cargo.toml  README.md  build.sh
captionflow/: craco.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
captionflow/public/: _headers  libmain.js  libmain.wasm  libmain.worker.js  robots.txt  sitemap.xml
captionflow/src/: App.css  index.css  main.tsx  routeTree.gen.ts  theme.css  types.ts
captionflow/src/components/: CaptionBlock.jsx  CaptionListItem.jsx  CaptionSidebar.tsx  EmptyWaveformPlaceholder.jsx  ExportMenu.tsx  FrameStepControls.tsx  HeaderToolbar.tsx  Icon.jsx  KeyboardShortcutsModal.tsx  NucleusIcon.jsx  PlaybackRateControls.tsx  SaveStatusIndicator.tsx  Timeline.tsx  VideoControlsBar.tsx  VideoOverlay.tsx  VideoPlayer.tsx  VolumeControl.tsx  Waveform.jsx  WaveformGL.tsx  caption-editor-ui.tsx
captionflow/src/components/layout/: caption-editor-layout.tsx  header.tsx
captionflow/src/hooks/: useAudioProcessing.ts  useAudioProcessingFFmpeg.ts  useAutoSave.ts  useCaptionBurner.ts  useTranscriptionProcessor.ts  useVideoFps.js  useWhisper.js
captionflow/src/lib/: storage.ts
captionflow/src/pkg/: captioneditor.d.ts  captioneditor.js  captioneditor_bg.wasm  captioneditor_bg.wasm.d.ts  package.json
captionflow/src/routes/: __root.tsx  index.tsx  landing.tsx  privacy.tsx  terms.tsx
captionflow/src/routes/app/: route.tsx
src/: captioneditor.rs  lib.rs  main.rs  structs.rs  waveform.rs
