[package]
name = "captioneditor"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.101"
web-sys = { version = "0.3", features = ["console", "HtmlVideoElement", "Document", "Element", "HtmlCanvasElement", "WebGlRenderingContext", "CanvasRenderingContext2d", "AudioContext", "AnalyserNode"] }
js-sys = "0.3.78"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde-wasm-bindgen = "0.6.5"
console = "0.16.0"
log = "0.4.28"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
rubato = "0.16.2"

[lib]
crate-type = ["cdylib", "rlib"]